playbooks/roles/nvidia_gpu_operator/templates/gpu-cluster-policy.yaml
apiVersion: nvidia.com/v1
kind: ClusterPolicy
metadata:
  name: gpu-cluster-policy
spec:
  dcgmExporter:
    affinity: {}
    image: dcgm-exporter
    imagePullSecrets: []
    nodeSelector: {}
    podSecurityContext: {}
    repository: nvcr.io/nvidia/k8s
    resources: {}
    securityContext: {}
    tolerations: []
    version: sha256:ced606933cd2210768ee8488b624c64ac0bdce6f05d9c4b4210e251370a14ff8
  devicePlugin:
    affinity: {}
    args:
    - --mig-strategy=single
    - --pass-device-specs=true
    - --fail-on-init-error=true
    - --device-list-strategy=envvar
    - --nvidia-driver-root=/run/nvidia/driver
    image: k8s-device-plugin
    imagePullSecrets: []
    nodeSelector: {}
    podSecurityContext: {}
    repository: nvcr.io/nvidia
    resources: {}
    securityContext: {}
    tolerations: []
    version: sha256:ea353fe57628f4d3c3e1cda126455d02f2277e3ee92fa9da441d409d76b2ac92
  driver:
    affinity: {}
    image: driver
    imagePullSecrets: []
    licensingConfig:
      configMapName: ""
    nodeSelector: {}
    podSecurityContext: {}
    repoConfig:
      configMapName: ""
      destinationDir: ""
    repository: nvcr.io/nvidia
    resources: {}
    securityContext: {}
    tolerations: []
    version: sha256:017d2e2a1bc410e9d2ac116683fc49a6f28e935cadee86e712cc147ea0239469
  gfd:
    affinity: {}
    image: gpu-feature-discovery
    imagePullSecrets: []
    migStrategy: single
    nodeSelector: {}
    podSecurityContext: {}
    repository: nvcr.io/nvidia
    resources: {}
    securityContext: {}
    tolerations: []
    version: sha256:bfc39d23568458dfd50c0c5323b6d42bdcd038c420fb2a2becd513a3ed3be27f
  operator:
    defaultRuntime: crio
    validator:
      image: cuda-sample
      imagePullSecrets: []
      repository: nvcr.io/nvidia/k8s
      version: sha256:2a30fe7e23067bc2c3f8f62a6867702a016af2b80b9f6ce861f3fea4dfd85bc2
  toolkit:
    affinity: {}
    image: container-toolkit
    imagePullSecrets: []
    nodeSelector: {}
    podSecurityContext: {}
    repository: nvcr.io/nvidia/k8s
    resources: {}
    securityContext: {}
    tolerations: []
    version: sha256:c91875db54ad5d2a2ed396c8fd15cc666411ff35c58c634680946371d32507ae
